Android: MarkersFragment now refreshes the list of markers; markers can be selected and edited. Added MarkerDetailsActivity. Added empty custom view for wave forms.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/Loops.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Loops.axml
@@ -21,8 +21,9 @@
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:background="#33000000"
-      android:text="Add"
+      android:text="+"
       android:textColor="#ffffffff"
+      android:textSize="14dp"
       android:padding="8dp" />
   </RelativeLayout>
   <ListView
