--- a/MPfm/MPfm.Android/Resources/Layout/Markers.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Markers.axml
@@ -5,7 +5,7 @@
   android:layout_height="fill_parent">
   <RelativeLayout
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="wrap_content">
     <TextView
       android:id="@+id/markers_lblTitle"
       android:text="Markers"
@@ -21,19 +21,17 @@
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:background="#33000000"
-      android:text="Add"
+      android:text="+"
       android:textColor="#ffffffff"
+      android:textSize="14dp"
       android:padding="8dp" />
   </RelativeLayout>
   <ListView
     android:id="@+id/markers_listView"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="fill_parent"    
     android:background="@android:color/transparent"
-    android:cacheColorHint="#00000000"
-    android:focusable="false"
-    android:focusableInTouchMode="false"
-    android:clickable="false"
-    android:divider="#00000000"
-    android:listSelector="@android:color/transparent" />
+    android:cacheColorHint="#333333"
+    android:divider="#FFFFFF"
+    android:listSelector="#CCCCCC" />
 </LinearLayout>
