--- a/MPfm/MPfm.Android/Resources/Layout/Player.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Player.axml
@@ -33,12 +33,13 @@
         android:gravity="center_horizontal"
         android:padding="6dip" />
   </LinearLayout>
-  <LinearLayout
-      android:id="@+id/player_layoutWaveForm"
+  <org.sessionsapp.android.WaveFormView
+      android:id="@+id/player_waveFormView"
       android:orientation="horizontal"
+      android:background="#000000"
       android:layout_width="fill_parent"
       android:layout_height="120dp">
-  </LinearLayout>
+  </org.sessionsapp.android.WaveFormView>
   <FrameLayout
       android:id="@+id/player_linearLayoutSubviews"
       android:orientation="horizontal"
