--- a/MPfm/MPfm.iOS/XIB/iPad/SyncMenuViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/SyncMenuViewController_iPad.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
 		<string key="IBDocument.SystemVersion">12D78</string>
-		<string key="IBDocument.InterfaceBuilderVersion">4457.6</string>
+		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
 		<string key="IBDocument.AppKitVersion">1187.37</string>
 		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">3682.6</string>
+			<string key="NS.object.0">2083</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -38,85 +38,13 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">1316</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="605127268">
-						<reference key="NSNextResponder" ref="311358754"/>
-						<int key="NSvFlags">1298</int>
-						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIActivityIndicatorView" id="993616676">
-								<reference key="NSNextResponder" ref="605127268"/>
-								<int key="NSvFlags">1316</int>
-								<object class="NSPSMatrix" key="NSFrameMatrix"/>
-								<string key="NSFrame">{{0, 1}, {20, 20}}</string>
-								<reference key="NSSuperview" ref="605127268"/>
-								<reference key="NSWindow"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<bool key="IBUIHidesWhenStopped">NO</bool>
-							</object>
-							<object class="IBUILabel" id="768070170">
-								<reference key="NSNextResponder" ref="605127268"/>
-								<int key="NSvFlags">1316</int>
-								<object class="NSPSMatrix" key="NSFrameMatrix"/>
-								<string key="NSFrame">{{28, 0}, {107, 21}}</string>
-								<reference key="NSSuperview" ref="605127268"/>
-								<reference key="NSWindow"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Loading index...</string>
-								<object class="NSColor" key="IBUITextColor" id="523494391">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
-								</object>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="928107888">
-									<string key="name">HelveticaNeue</string>
-									<string key="family">Helvetica Neue</string>
-									<int key="traits">0</int>
-									<double key="pointSize">14</double>
-								</object>
-								<object class="NSFont" key="IBUIFont" id="1058677925">
-									<string key="NSName">HelveticaNeue</string>
-									<double key="NSSize">14</double>
-									<int key="NSfFlags">16</int>
-								</object>
-								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-							</object>
-						</array>
-						<object class="NSPSMatrix" key="NSFrameMatrix"/>
-						<string key="NSFrame">{{314, 488}, {141, 27}}</string>
-						<reference key="NSSuperview" ref="311358754"/>
-						<reference key="NSWindow"/>
-						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-					</object>
-					<object class="IBUITableView" id="30965723">
-						<reference key="NSNextResponder" ref="311358754"/>
-						<int key="NSvFlags">1298</int>
-						<object class="NSPSMatrix" key="NSFrameMatrix"/>
-						<string key="NSFrameSize">{768, 944}</string>
-						<reference key="NSSuperview" ref="311358754"/>
-						<reference key="NSWindow"/>
-						<reference key="IBUIBackgroundColor" ref="523494391"/>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-						<bool key="IBUIAlwaysBounceVertical">YES</bool>
-						<int key="IBUISeparatorStyle">1</int>
-						<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
-						<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
-						<float key="IBUIRowHeight">44</float>
-						<float key="IBUISectionHeaderHeight">22</float>
-						<float key="IBUISectionFooterHeight">22</float>
-					</object>
 					<object class="IBUIView" id="216639592">
 						<reference key="NSNextResponder" ref="311358754"/>
-						<int key="NSvFlags">1306</int>
+						<int key="NSvFlags">1290</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIButton" id="584047185">
 								<reference key="NSNextResponder" ref="216639592"/>
-								<int key="NSvFlags">1316</int>
+								<int key="NSvFlags">1313</int>
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
 								<string key="NSFrame">{{623, 7}, {136, 44}}</string>
 								<reference key="NSSuperview" ref="216639592"/>
@@ -126,7 +54,10 @@
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUINormalTitle">Reset selection</string>
-								<reference key="IBUIHighlightedTitleColor" ref="523494391"/>
+								<object class="NSColor" key="IBUIHighlightedTitleColor" id="523494391">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MQA</bytes>
+								</object>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
@@ -138,14 +69,14 @@
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<string key="name">HelveticaNeue-Bold</string>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="165177801">
+									<string key="name">HelveticaNeue</string>
 									<string key="family">Helvetica Neue</string>
-									<int key="traits">2</int>
+									<int key="traits">0</int>
 									<double key="pointSize">14</double>
 								</object>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">HelveticaNeue-Bold</string>
+								<object class="NSFont" key="IBUIFont" id="132646289">
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -166,17 +97,8 @@
 								<reference key="IBUITextColor" ref="523494391"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<string key="name">HelveticaNeue-Medium</string>
-									<string key="family">Helvetica Neue</string>
-									<int key="traits">0</int>
-									<double key="pointSize">14</double>
-								</object>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">HelveticaNeue-Medium</string>
-									<double key="NSSize">14</double>
-									<int key="NSfFlags">16</int>
-								</object>
+								<reference key="IBUIFontDescription" ref="165177801"/>
+								<reference key="IBUIFont" ref="132646289"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUILabel" id="141890821">
@@ -195,8 +117,13 @@
 								<reference key="IBUITextColor" ref="523494391"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<reference key="IBUIFontDescription" ref="928107888"/>
-								<reference key="IBUIFont" ref="1058677925"/>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="956952430">
+									<string key="name">HelveticaNeue-Light</string>
+									<string key="family">Helvetica Neue</string>
+									<int key="traits">0</int>
+									<double key="pointSize">14</double>
+								</object>
+								<reference key="IBUIFont" ref="132646289"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
@@ -208,6 +135,68 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
 						</object>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+					</object>
+					<object class="IBUITableView" id="30965723">
+						<reference key="NSNextResponder" ref="311358754"/>
+						<int key="NSvFlags">1298</int>
+						<object class="NSPSMatrix" key="NSFrameMatrix"/>
+						<string key="NSFrameSize">{768, 944}</string>
+						<reference key="NSSuperview" ref="311358754"/>
+						<reference key="NSWindow"/>
+						<reference key="IBUIBackgroundColor" ref="523494391"/>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<bool key="IBUIAlwaysBounceVertical">YES</bool>
+						<int key="IBUISeparatorStyle">1</int>
+						<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
+						<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
+						<float key="IBUIRowHeight">44</float>
+						<float key="IBUISectionHeaderHeight">22</float>
+						<float key="IBUISectionFooterHeight">22</float>
+					</object>
+					<object class="IBUIView" id="1022914960">
+						<reference key="NSNextResponder" ref="311358754"/>
+						<int key="NSvFlags">1314</int>
+						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUIActivityIndicatorView" id="870718485">
+								<reference key="NSNextResponder" ref="1022914960"/>
+								<int key="NSvFlags">1316</int>
+								<object class="NSPSMatrix" key="NSFrameMatrix"/>
+								<string key="NSFrame">{{365, 13}, {37, 37}}</string>
+								<reference key="NSSuperview" ref="1022914960"/>
+								<reference key="NSWindow"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<bool key="IBUIHidesWhenStopped">NO</bool>
+								<int key="IBUIStyle">0</int>
+							</object>
+							<object class="IBUILabel" id="443250651">
+								<reference key="NSNextResponder" ref="1022914960"/>
+								<int key="NSvFlags">1314</int>
+								<object class="NSPSMatrix" key="NSFrameMatrix"/>
+								<string key="NSFrame">{{20, 54}, {728, 21}}</string>
+								<reference key="NSSuperview" ref="1022914960"/>
+								<reference key="NSWindow"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<string key="IBUIText">Loading index...</string>
+								<reference key="IBUITextColor" ref="523494391"/>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUITextAlignment">1</int>
+								<reference key="IBUIFontDescription" ref="956952430"/>
+								<reference key="IBUIFont" ref="132646289"/>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+							</object>
+						</array>
+						<object class="NSPSMatrix" key="NSFrameMatrix"/>
+						<string key="NSFrame">{{0, 460}, {768, 85}}</string>
+						<reference key="NSSuperview" ref="311358754"/>
+						<reference key="NSWindow"/>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
 				</array>
@@ -232,14 +221,6 @@
 			<array class="NSMutableArray" key="connectionRecords">
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">activityIndicator</string>
-						<reference key="source" ref="749182190"/>
-						<reference key="destination" ref="993616676"/>
-					</object>
-					<string key="id">20</string>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">btnSelect</string>
 						<reference key="source" ref="749182190"/>
 						<reference key="destination" ref="584047185"/>
@@ -253,14 +234,6 @@
 						<reference key="destination" ref="141890821"/>
 					</object>
 					<string key="id">14</string>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">lblLoading</string>
-						<reference key="source" ref="749182190"/>
-						<reference key="destination" ref="768070170"/>
-					</object>
-					<string key="id">19</string>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -288,19 +261,35 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">viewLoading</string>
-						<reference key="source" ref="749182190"/>
-						<reference key="destination" ref="605127268"/>
-					</object>
-					<string key="id">12</string>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">viewSync</string>
 						<reference key="source" ref="749182190"/>
 						<reference key="destination" ref="216639592"/>
 					</object>
 					<string key="id">17</string>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">activityIndicator</string>
+						<reference key="source" ref="749182190"/>
+						<reference key="destination" ref="870718485"/>
+					</object>
+					<string key="id">er8-1o-Fdh</string>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">lblLoading</string>
+						<reference key="source" ref="749182190"/>
+						<reference key="destination" ref="443250651"/>
+					</object>
+					<string key="id">o9W-bD-3xu</string>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">viewLoading</string>
+						<reference key="source" ref="749182190"/>
+						<reference key="destination" ref="1022914960"/>
+					</object>
+					<string key="id">ULf-a8-PFH</string>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -335,34 +324,16 @@
 						<string key="id">2</string>
 						<reference key="object" ref="311358754"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="605127268"/>
 							<reference ref="30965723"/>
 							<reference ref="216639592"/>
+							<reference ref="1022914960"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
-						<string key="id">4</string>
-						<reference key="object" ref="605127268"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="993616676"/>
-							<reference ref="768070170"/>
-						</array>
-						<reference key="parent" ref="311358754"/>
-					</object>
-					<object class="IBObjectRecord">
-						<string key="id">10</string>
-						<reference key="object" ref="993616676"/>
-						<reference key="parent" ref="605127268"/>
-					</object>
-					<object class="IBObjectRecord">
-						<string key="id">11</string>
-						<reference key="object" ref="768070170"/>
-						<reference key="parent" ref="605127268"/>
-					</object>
-					<object class="IBObjectRecord">
 						<string key="id">5</string>
 						<reference key="object" ref="30965723"/>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="311358754"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -378,17 +349,40 @@
 					<object class="IBObjectRecord">
 						<string key="id">7</string>
 						<reference key="object" ref="584047185"/>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="216639592"/>
 					</object>
 					<object class="IBObjectRecord">
 						<string key="id">8</string>
 						<reference key="object" ref="814181912"/>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="216639592"/>
 					</object>
 					<object class="IBObjectRecord">
 						<string key="id">9</string>
 						<reference key="object" ref="141890821"/>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="216639592"/>
+					</object>
+					<object class="IBObjectRecord">
+						<string key="id">TCj-HU-GMr</string>
+						<reference key="object" ref="1022914960"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="870718485"/>
+							<reference ref="443250651"/>
+						</array>
+						<reference key="parent" ref="311358754"/>
+					</object>
+					<object class="IBObjectRecord">
+						<string key="id">Wn9-ji-cRf</string>
+						<reference key="object" ref="870718485"/>
+						<reference key="parent" ref="1022914960"/>
+					</object>
+					<object class="IBObjectRecord">
+						<string key="id">wV5-J6-qXg</string>
+						<reference key="object" ref="443250651"/>
+						<array class="NSMutableArray" key="children"/>
+						<reference key="parent" ref="1022914960"/>
 					</object>
 				</array>
 			</object>
@@ -399,18 +393,9 @@
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<boolean value="NO" key="-2.showNotes"/>
-				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<reference key="10.IBUserGuides" ref="0"/>
-				<boolean value="NO" key="10.showNotes"/>
-				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<reference key="11.IBUserGuides" ref="0"/>
-				<boolean value="NO" key="11.showNotes"/>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<reference key="2.IBUserGuides" ref="0"/>
 				<boolean value="NO" key="2.showNotes"/>
-				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<reference key="4.IBUserGuides" ref="0"/>
-				<boolean value="NO" key="4.showNotes"/>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<reference key="5.IBUserGuides" ref="0"/>
 				<boolean value="NO" key="5.showNotes"/>
@@ -426,6 +411,15 @@
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<reference key="9.IBUserGuides" ref="0"/>
 				<boolean value="NO" key="9.showNotes"/>
+				<string key="TCj-HU-GMr.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<reference key="TCj-HU-GMr.IBUserGuides" ref="0"/>
+				<boolean value="NO" key="TCj-HU-GMr.showNotes"/>
+				<string key="Wn9-ji-cRf.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<reference key="Wn9-ji-cRf.IBUserGuides" ref="0"/>
+				<boolean value="NO" key="Wn9-ji-cRf.showNotes"/>
+				<string key="wV5-J6-qXg.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<reference key="wV5-J6-qXg.IBUserGuides" ref="0"/>
+				<boolean value="NO" key="wV5-J6-qXg.showNotes"/>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
@@ -511,6 +505,6 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">3682.6</string>
+		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
 </archive>
