--- a/MPfm/MPfm.Android/Resources/Layout/EqualizerPresetDetails.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/EqualizerPresetDetails.axml
@@ -3,7 +3,8 @@
     android:id="@+id/equalizerPresetDetails_mainLayout"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@color/background">
   <org.sessionsapp.android.EqualizerPresetGraphView
       android:id="@+id/equalizerPresetDetails_graphView"
       android:orientation="horizontal"
@@ -24,31 +25,51 @@
       <TextView
         android:id="@+id/equalizerPresetDetails_lblPresetName"        
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"        
+        android:layout_height="wrap_content"
+        android:paddingRight="8dp"
         android:text="Preset Name:"
         android:textSize="14dp"
-        android:padding="8dp" />
+        android:textColor="#FFFFFF" />
       <EditText
         android:id="@+id/equalizerPresetDetails_txtPresetName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="1"        
+        android:paddingRight="8dp"
+        android:textSize="14dp"
+        android:textColor="#FFFFFF"
+        android:padding="8dp" />
+    </LinearLayout>
+    <ListView
+      android:id="@+id/equalizerPresetDetails_listView"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      android:background="@android:color/transparent"
+      android:cacheColorHint="#333333"
+      android:divider="#FFFFFF"
+      android:listSelector="#CCCCCC" />
+    <LinearLayout
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:padding="6dp">
+      <Button
+        android:id="@+id/equalizerPresetDetails_btnNormalize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"        
+        android:text="Normalize"
+        android:textColor="#ffffffff"
+        android:textSize="14dp"
+        android:padding="8dp" />
+      <Button
+        android:id="@+id/equalizerPresetDetails_btnReset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"        
+        android:text="Reset"
+        android:textColor="#ffffffff"
         android:textSize="14dp"
         android:padding="8dp" />
     </LinearLayout>
-    <ScrollView
-      android:id="@+id/equalizerPresetDetails_scrollView"      
-      android:layout_width="fill_parent"
-      android:layout_height="0dp"
-      android:layout_weight="1">
-      <!-- Scroll view can only have one child -->
-      <LinearLayout
-        android:id="@+id/equalizerPresetDetails_scrollViewLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:padding="8dp">
-      </LinearLayout>
-      </ScrollView>
   </LinearLayout>
 </LinearLayout>
