Android: Added album art loading from presenter in MobileLibraryBrowser. Another Android WTF: GetView in a list adapter gets called very often (especially position 0), so the album art loading is disabled for now. Why can't you optimize your code, Google? Do you expect developers always to get around your stupid bugs? This is happening WAY too often.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowser.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowser.axml
@@ -15,8 +15,8 @@
     android:id="@+id/mobileLibraryBrowser_gridView"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:columnWidth="90dp"
-    android:numColumns="auto_fit"
+    android:columnWidth="100dp"
+    android:numColumns="2"
     android:verticalSpacing="10dp"
     android:horizontalSpacing="10dp"
     android:stretchMode="columnWidth"
