--- a/MPfm/MPfm.Android/Resources/Layout/SyncMenu.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/SyncMenu.axml
@@ -1,14 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/syncMenu_mainLayout"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-  <TextView
-    android:id="@+id/syncMenu_lblTitle"
-    android:text="[Title]"
-    android:layout_width="match_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:gravity="center_vertical"
+    android:background="@color/background">
+  <LinearLayout
+    android:id="@+id/syncMenu_loadingLayout"    
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:padding="6dip" />
+    android:orientation="horizontal"
+    android:gravity="center">
+    <ProgressBar
+      android:id="@+id/syncMenu_progressBar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:indeterminate="true" />
+    <TextView
+      android:id="@+id/syncMenu_lblStatus"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="8dp"
+      android:padding="6dip"
+      android:text="Loading..."
+      android:textColor="#FFFFFF" />
+  </LinearLayout>
+  <LinearLayout
+    android:id="@+id/syncMenu_mainLayout"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:visibility="gone">
+    <ListView
+      android:id="@+id/syncMenu_listView"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      android:background="#FFFFFF"
+      android:cacheColorHint="#333333"
+      android:divider="#FFFFFF"
+      android:listSelector="#CCCCCC" />
+    <LinearLayout    
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:gravity="center_vertical">
+      <LinearLayout      
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center_vertical">
+        <TextView
+          android:id="@+id/syncMenu_lblTotal"
+          android:text="Total: 0 files (0.0 MB)"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:textColor="#FFFFFF"
+          android:padding="6dip" />
+        <TextView
+          android:id="@+id/syncMenu_lblFreeSpace"
+          android:text="Free space: 0 MB"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:textColor="#FFFFFF"
+          android:padding="6dip" />
+      </LinearLayout>
+      <Button
+        android:id="@+id/syncMenu_btnSelectAll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select all"
+        android:textColor="#FFFFFF" />
+    </LinearLayout>
+  </LinearLayout>
 </LinearLayout>
