Android: Added layout for SyncDownload activity. Added checkbox, artist and album icons for all Android pixel densities.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/SyncDownload.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/SyncDownload.axml
@@ -1,14 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/syncDownload_mainLayout"
-    android:orientation="vertical"
+  android:id="@+id/syncDownload_mainLayout"
+  android:orientation="vertical"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  android:padding="12dp"
+  android:background="@color/background">
+  <LinearLayout
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-  <TextView
-    android:id="@+id/syncDownload_lblTitle"
-    android:text="[Title]"
-    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:padding="6dip" />
+    android:orientation="horizontal"
+    android:gravity="center"
+    android:padding="12dp">
+    <ProgressBar
+      android:id="@+id/syncDownload_progressBar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="6dp"
+      android:max="100" />
+    <LinearLayout
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:orientation="vertical"
+      android:padding="12dp">
+      <TextView
+        android:id="@+id/syncDownload_lblTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="6dp"
+        android:text="Downloading files..."
+        android:textColor="#FFFFFF"
+        android:textSize="22dp" />
+      <TextView
+        android:id="@+id/syncDownload_lblFileName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="6dp"
+        android:text="01 - Test.mp3"
+        android:textColor="#CCCCCC"
+        android:textSize="16dp" />
+    </LinearLayout>
+  </LinearLayout>
+  <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="12dp">
+    <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      android:padding="12dp">
+      <TextView
+        android:id="@+id/syncDownload_lblCompletedValue"      
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="0.0%"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
+      <TextView
+        android:id="@+id/syncDownload_lblCompleted"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="completed"
+        android:textColor="#AAAAAA"
+        android:textSize="12dp" />
+    </LinearLayout>
+    <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="12dp"
+      android:orientation="vertical">
+      <TextView
+        android:id="@+id/syncDownload_lblFilesDownloadedValue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
+      <TextView
+        android:id="@+id/syncDownload_lblFilesDownloaded"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="files downloaded"
+        android:textColor="#AAAAAA"
+        android:textSize="12dp" />
+    </LinearLayout>
+    <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="12dp"
+      android:orientation="vertical">
+      <TextView
+        android:id="@+id/syncDownload_lblTotalFilesValue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
+      <TextView
+        android:id="@+id/syncDownload_lblTotalFiles"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="total files"
+        android:textColor="#AAAAAA"
+        android:textSize="12dp" />
+    </LinearLayout>
+    <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="12dp"
+      android:orientation="vertical">
+      <TextView
+        android:id="@+id/syncDownload_lblCurrentFileProgressValue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
+      <TextView
+        android:id="@+id/syncDownload_lblCurrentFileProgress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="current file"
+        android:textColor="#AAAAAA"
+        android:textSize="12dp" />
+    </LinearLayout>
+    <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="12dp"
+      android:orientation="vertical">
+      <TextView
+        android:id="@+id/syncDownload_lblDownloadSpeedValue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="0 kb/s"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
+      <TextView
+        android:id="@+id/syncDownload_lblDownloadSpeed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="download speed"
+        android:textColor="#AAAAAA"
+        android:textSize="12dp" />
+    </LinearLayout>
+    <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="12dp"
+      android:orientation="vertical">
+      <TextView
+        android:id="@+id/syncDownload_lblErrorsValue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
+      <TextView
+        android:id="@+id/syncDownload_lblErrors"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="errors"
+        android:textColor="#AAAAAA"
+        android:textSize="12dp" />
+    </LinearLayout>    
+  </LinearLayout>
 </LinearLayout>
