Android: Added icons for all syncable device types. SyncDownload activity is now fully functional; there is however a performance bug because the timer refreshes the download progress too often. Fixed list view dividers in all screens.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/EqualizerPresets.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/EqualizerPresets.axml
@@ -53,7 +53,7 @@
     android:layout_weight="1"
     android:background="#FFFFFF"
     android:cacheColorHint="#333333"
-    android:divider="#333333"
+    android:divider="#BBBBBB"
     android:dividerHeight="1px"
     android:listSelector="#999999" />  
 </LinearLayout>
