--- a/MPfm/MPfm.Android/Resources/Layout/GenericCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/GenericCell.axml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
-   android:layout_height="44dp"
+   android:layout_height="52dp"
    android:orientation="horizontal">
   <ImageView
     android:id="@+id/genericcell_image"
-    android:layout_width="44dp"
-    android:layout_height="44dp"
-    android:layout_marginRight="8dp"
+    android:layout_width="48dp"
+    android:layout_height="48dp"
+    android:layout_margin="4dp"
     android:src="@drawable/icon" />
   <TextView
       android:id="@+id/genericcell_title"
